--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -18,7 +18,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/item_partner"
+            tools:listitem="@layout/item_request"
             android:scrollbarAlwaysDrawVerticalTrack="true"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
