--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -80,10 +80,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="Description"
+                    android:text="Desctiption"
                     android:textAlignment="center"
                     android:textColor="@color/grey_text"
                     android:textSize="16dp"
+                    android:layout_marginHorizontal="10dp"
                     android:visibility="visible" />
             </LinearLayout>
 
@@ -123,7 +124,7 @@
                 <include layout="@layout/snippet_profile_courses"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:layout_margin="5dp" />
 
                 </LinearLayout>
