added progress bars

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,6 +79,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/item_partner"
             android:scrollbarAlwaysDrawVerticalTrack="true"/>
+
+        <ProgressBar
+            android:id="@+id/progressBarPartners"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="visible"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
