--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -20,6 +20,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/item_request"
             android:scrollbarAlwaysDrawVerticalTrack="true"/>
+
+        <ProgressBar
+            android:id="@+id/progressBarRequests"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
