--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -7,6 +7,7 @@
         android:type="linear"
         android:angle="90"
         android:startColor="#FFFFFF"
+        android:centerColor="#F3F3F3"
         android:endColor="#EEEEEE"/>
 
 </shape>
