--- a/app/src/main/res/layout/snippet_profile_courses.xml
+++ b/app/src/main/res/layout/snippet_profile_courses.xml
@@ -1,47 +1,54 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:id="@+id/titleCourses"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:alpha="0.7">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewTitleCourses"
+        <LinearLayout
+            android:id="@+id/titleCourses"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:alpha="0.7">
+
+            <TextView
+                android:id="@+id/textViewTitleCourses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/courses_title"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginVertical="10dp"/>
+            <ImageButton
+                android:id="@+id/btn_add_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:paddingHorizontal="4dp"
+                android:paddingTop="2dp"
+                app:srcCompat="@drawable/ic_add_course"
+                android:visibility="visible"/>
+
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/courses_recycler_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-light"
-            android:text="@string/courses_title"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_marginVertical="10dp"/>
-        <ImageButton
-            android:id="@+id/btn_add_course"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingHorizontal="10dp"
-            tools:src="@drawable/ic_add_course"
-            android:visibility="gone"/>
-    </LinearLayout>
+            android:layout_alignParentTop="true"
+            android:paddingBottom="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleCourses"
+            tools:listitem="@layout/item_course" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/courses_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:paddingBottom="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleCourses"
-        tools:listitem="@layout/item_course" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
