--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -80,10 +80,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
-                    android:text="Desctiption"
+                    android:text="Description"
                     android:textAlignment="center"
                     android:textColor="@color/grey_text"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:layout_marginHorizontal="10dp"
                     android:visibility="visible" />
             </LinearLayout>
