--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Search.results.SearchFragment">
 
-
-
-
+    <!-- Results -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
@@ -16,7 +14,7 @@
         android:layout_alignParentTop="true"
         tools:listitem="@layout/item_partner"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
     <ProgressBar
         android:id="@+id/progressBarSearch"
@@ -26,49 +24,61 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="110dp"
         android:visibility="visible"/>
+    <!-- -->
 
+    <!-- search filters -->
     <LinearLayout
         android:id="@+id/search_filters_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        android:orientation="vertical"
         android:visibility="visible">
+
+        <!-- course number box -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_rectangle"
-            android:layout_margin="20dp">
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp">
 
-            <ImageButton
-                android:id="@+id/button_search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_bubble"
-                android:layout_gravity="center"
-                android:layout_marginStart="5dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
             <EditText
                 android:id="@+id/edit_text_search_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey_text"
                 android:background="@android:color/transparent"
-                android:hint="Course Number"
+                android:hint="Course Name"
                 android:textSize="18sp"
                 android:gravity="start"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="5dp"
                 android:singleLine="true"
-                android:inputType="number"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/button_search"
+                app:layout_constraintStart_toStartOf="parent"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include layout="@layout/snippet_profile_preferences"/>
+
+
+        <ImageButton
+            android:id="@+id/button_search"
+            android:tooltipText="Search"
+            android:background="@drawable/rounded_rectangle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search_bubble"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </LinearLayout>
 
