--- a/app/src/main/res/layout/temp.xml
+++ b/app/src/main/res/layout/temp.xml
@@ -4,34 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.ProfileFragment">
+    tools:context=".Search.results.SearchFragment">
 
-    <LinearLayout
-        android:layout_height="match_parent"
+    <!-- Results -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        tools:listitem="@layout/item_partner"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        android:visibility="gone"/>
 
-        <include layout="@layout/snippet_top_profilebar" />
+    <ProgressBar
+        android:id="@+id/progressBarSearch"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="110dp"
+        android:visibility="visible"/>
+    <!-- -->
 
-        <include layout="@layout/snippet_profile_header"
+    <!-- search filters -->
+    <LinearLayout
+        android:id="@+id/search_filters_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <!-- course number box -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"/>
+            android:background="@drawable/rounded_rectangle"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp">
 
-        <include layout="@layout/snippet_profile_courses"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"/>
+            <ImageButton
+                android:id="@+id/button_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search_bubble"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <EditText
+                android:id="@+id/edit_text_search_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_text"
+                android:background="@android:color/transparent"
+                android:hint="Course Number"
+                android:textSize="18sp"
+                android:gravity="start"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="5dp"
+                android:singleLine="true"
+                android:inputType="number"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/button_search"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/edit_profile_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
-            android:text="edit profile"
-            android:textAllCaps="false"
-            android:layout_gravity="center"/>
+        <include layout="@layout/snippet_profile_preferences"/>
 
     </LinearLayout>
+
+    <!--    <ImageView-->
+    <!--        android:id="@+id/imageView"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:src="@drawable/ic_search"-->
+    <!--        col/>-->
+
 
 </FrameLayout>
