--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,7 +37,8 @@
                 android:paddingEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="invisible"/>
 
                 <ImageView
                     android:id="@+id/chat_avatar"
@@ -82,6 +83,7 @@
         android:layout_height="match_parent"
                 tools:listitem="@layout/item_message"
         android:scrollbars="vertical"
+        android:layout_marginBottom="2dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     </LinearLayout>
