--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -56,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:paddingBottom="5dp"
                     android:gravity="center">
                     <ImageView
@@ -66,11 +66,11 @@
                         android:src="@drawable/ic_location" />
 
                     <TextView
+                        android:id="@+id/location_city_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed-light"
                         android:paddingHorizontal="3dp"
-                        android:text="Jerusalem"
                         android:textColor="@color/grey_text"
                         android:textSize="14sp" />
                 </LinearLayout>
