--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -41,6 +41,17 @@
                 android:visibility="invisible"/>
 
                 <ImageView
+                    android:id="@+id/chat_meeting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_meeting"
+                    android:paddingEnd="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:visibility="visible"/>
+
+                <ImageView
                     android:id="@+id/chat_avatar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
