--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
                 android:background="@android:color/transparent"
                 android:gravity="start"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:fontFamily="sans-serif-light"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
@@ -77,18 +78,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:fontFamily="sans-serif-medium"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/accent_filled_rounded_rectangle"
+            android:hint="Sign In"
+            android:textColorHint="@color/white"
+            android:singleLine="true"
+            android:textColor="@color/grey_text"
+            android:textSize="18sp" />
             <Button
-                android:id="@+id/login_btn"
+                android:id="@+id/login_register_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:fontFamily="sans-serif-medium"
                 android:padding="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/accent_filled_rounded_rectangle"
-                android:hint="Sign In"
-                android:textColorHint="@color/white"
+                android:background="@drawable/accent_stroke_rounded_rectangle"
+                android:hint="Register"
+                android:textColorHint="@color/colorAccent"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
                 android:textSize="18sp" />
@@ -108,7 +122,7 @@
             android:background="@drawable/rounded_rectangle">
 
             <ImageButton
-                android:id="@+id/login_google_logo"
+                android:id="@+id/login_google_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_google_logo"
@@ -118,6 +132,17 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loginProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
