--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,55 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".partners.HomeFragment">
 
+    <TextView
+        android:id="@+id/home_empty_partners_text"
+        android:text="No partners added yet :("
+        android:textSize="26sp"
+        android:gravity="center"
+        android:fontFamily="sans-serif-light"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/grey_text"
+        android:visibility="visible">
 
+    </TextView>
 
-<!--    <TextView-->
-<!--        android:text="this is home"-->
-<!--        android:textSize="26sp"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--    </TextView>-->
-
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:gravity="right"-->
-<!--        android:layout_gravity="bottom">-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <com.google.android.material.appbar.AppBarLayout-->
-<!--            android:id="@+id/home_top_bar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="@dimen/toolbar_margin"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            android:background="@color/white">-->
-
-<!--            <androidx.appcompat.widget.Toolbar-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content">-->
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_centerVertical="true"-->
-<!--                        android:layout_marginStart="15dp"-->
-<!--                        android:fontFamily="sans-serif-light"-->
-<!--                        android:text="@string/menu_home"-->
-<!--                        android:textColor="@color/black"-->
-<!--                        android:textSize="20sp" />-->
-<!--                </RelativeLayout>-->
-<!--            </androidx.appcompat.widget.Toolbar>-->
-<!--        </com.google.android.material.appbar.AppBarLayout>-->
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton"
@@ -78,6 +47,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/item_partner"
+            android:visibility="visible"
             android:scrollbarAlwaysDrawVerticalTrack="true"/>
 
         <ProgressBar
