--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,10 +12,13 @@
         android:layout_width="match_parent">
 
         <ImageButton
-            android:id="@+id/profile_three_dots"
+            android:id="@+id/log_out_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?android:attr/actionOverflowButtonStyle"
+            android:src="@drawable/ic_exit"
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:background="@android:color/transparent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -42,14 +45,43 @@
 
                 <TextView
                     android:id="@+id/profile_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="Name"
                     android:textAlignment="center"
+                    android:layout_gravity="center"
                     android:textColor="#000"
+                    android:layout_marginHorizontal="10dp"
                     android:textSize="22sp"
                     android:visibility="visible" />
+
+                <LinearLayout
+                    android:id="@+id/profile_name_edit_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/profile_name_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="Name"
+                        android:textAlignment="center"
+                        android:textColor="#000"
+                        android:layout_marginHorizontal="10dp"
+                        android:textSize="22sp"
+                        android:minWidth="30dp"
+                        android:visibility="visible" />
+
+                    <ImageView
+                        android:id="@+id/profile_icon_edit_name_ok"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_ok" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/profile_location_snippet"
@@ -60,7 +92,7 @@
                     android:paddingBottom="5dp"
                     android:gravity="center">
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/icon_location"
                         android:layout_width="14sp"
                         android:layout_height="14sp"
                         android:src="@drawable/ic_location" />
@@ -77,15 +109,41 @@
 
                 <TextView
                     android:id="@+id/profile_desc"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="Description"
                     android:textAlignment="center"
                     android:textColor="@color/grey_text"
                     android:textSize="16sp"
+                    android:layout_gravity="center"
                     android:layout_marginHorizontal="10dp"
                     android:visibility="visible" />
+
+                <LinearLayout
+                    android:id="@+id/profile_desc_edit_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:visibility="gone">
+                    <EditText
+                        android:id="@+id/profile_desc_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="Description"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_text"
+                        android:textSize="16sp"
+                        android:minWidth="30dp"
+                        android:layout_marginHorizontal="10dp"
+                        android:visibility="visible" />
+                    <ImageView
+                        android:id="@+id/profile_icon_edit_desc_ok"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_ok" />
+                </LinearLayout>
             </LinearLayout>
 
 
