design changes to login page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,19 +34,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:padding="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_rectangle">
+
             <EditText
                 android:id="@+id/login_email_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="20dp"
+                android:paddingHorizontal="5dp"
                 android:background="@android:color/transparent"
+                android:fontFamily="sans-serif-light"
                 android:gravity="start"
                 android:hint="Email"
-                android:fontFamily="sans-serif-light"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
                 android:textSize="18sp"
@@ -58,20 +57,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:padding="15dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_rectangle">
             <EditText
                 android:id="@+id/login_email_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="20dp"
+                android:paddingHorizontal="5dp"
                 android:background="@android:color/transparent"
+                android:fontFamily="sans-serif-light"
                 android:gravity="start"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:fontFamily="sans-serif-light"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
                 android:textSize="18sp"
@@ -82,31 +79,29 @@
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
+            android:layout_height="@dimen/button_height"
             android:fontFamily="sans-serif-medium"
-            android:padding="10dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/accent_filled_rounded_rectangle"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/rounded_rectangle_accent_filled"
             android:hint="Sign In"
             android:textColorHint="@color/white"
             android:singleLine="true"
-            android:textColor="@color/grey_text"
             android:textSize="18sp" />
             <Button
                 android:id="@+id/login_register_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_height="@dimen/button_height"
                 android:fontFamily="sans-serif-medium"
-                android:padding="10dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/accent_stroke_rounded_rectangle"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/rounded_rectangle_accent_stroke"
                 android:hint="Register"
                 android:textColorHint="@color/colorAccent"
                 android:singleLine="true"
                 android:textColor="@color/grey_text"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:shadowColor="@color/white"/>
 
         <TextView
             android:layout_width="wrap_content"
