--- a/app/src/main/res/drawable/rounded_rectangle_accent_filled.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_accent_filled.xml
@@ -6,14 +6,9 @@
     <item>
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/light_grey" />
+            <solid android:color="@color/colorAccent" />
             <corners
                 android:radius="70dp" />
-            <padding
-                android:left="10dp"
-                android:top="5dp"
-                android:right="10dp"
-                android:bottom="5dp" />
         </shape>
 
     </item>
