--- a/app/src/main/res/drawable/rounded_rectangle_accent_stroke.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_accent_stroke.xml
@@ -6,14 +6,11 @@
     <item>
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/light_grey" />
+            <solid android:color="@color/white"/>
+            <stroke android:color="@color/colorAccent"
+                android:width="2dp"/>
             <corners
-                android:radius="70dp" />
-            <padding
-                android:left="10dp"
-                android:top="5dp"
-                android:right="10dp"
-                android:bottom="5dp" />
+                android:radius="30dp" />
         </shape>
 
     </item>
