--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="toolbar_margin">56dp</dimen>
     <dimen name="bottom_nav_menu">56dp</dimen>
+    <dimen name="button_height">36dp</dimen>
 </resources>
