--- a/app/src/main/res/drawable/rounded_rectangle_accent_filled.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_accent_filled.xml
@@ -6,7 +6,7 @@
     <item>
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="@color/colorPrimary" />
             <corners
                 android:radius="70dp" />
         </shape>
