--- a/app/src/main/res/drawable/rounded_rectangle_accent_stroke.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_accent_stroke.xml
@@ -7,7 +7,7 @@
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="@color/white"/>
-            <stroke android:color="@color/colorAccent"
+            <stroke android:color="@color/colorPrimary"
                 android:width="2dp"/>
             <corners
                 android:radius="30dp" />
