--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -19,7 +19,7 @@
             android:layout_margin="10dp"
             android:fontFamily="sans-serif-light"
             android:text="Course Name"
-            android:textColor="@color/dark_grey"
+            android:textColor="@color/white"
             android:textSize="14dp" />
 
     </LinearLayout>
