changed pop up location

--- a/app/src/main/res/layout/popup_profile.xml
+++ b/app/src/main/res/layout/popup_profile.xml
@@ -58,6 +58,7 @@
                         android:src="@drawable/ic_location" />
 
                     <TextView
+                        android:id="@+id/profile_popup_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif-condensed-light"
