--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".chat.RequestsFragment">
+    tools:context=".ui.fragments.inbox.RequestsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
