--- a/app/src/main/res/layout/fragment_inbox_holder.xml
+++ b/app/src/main/res/layout/fragment_inbox_holder.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".chat.InboxHolderFragment">
+    tools:context=".ui.fragments.inbox.InboxHolderFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
